# OptiqAI.github.io

./: .gitignore  ARCHITECTURE.md  CMakeLists.txt  DATABASE foaml_db;.txt  OCTL License  OptiqAI.htm  README.md  requirements.txt  run_gui.py
.github/workflows/: copilot-setup-steps.yml
AI Projects/: Document reader
AI Projects/P1-Markov Chain/: P1-Markov Chain.ipynb
Finance_projects/black-scholes model/: .gitignore  GITHUB_PUBLISH.md  README.md  __init__.py  example.py  publish_to_github.ps1  requirements.txt
Finance_projects/black_scholes/: .gitignore  BUG_FIXES.md  FILE_STRUCTURE.md  GITHUB_SETUP.md  IMPLEMENTATION_SUMMARY.md  PUSH_TO_GITHUB.md  QUICKSTART.md  README.md  UPLOAD_INSTRUCTIONS.md  __init__.py  ai_agent.py  backend_api.py  black_scholes_model.py  demo.py  file_manager.py  (+4 more)
backend/: experiment_db.py  main.py  model_registry.py  reconstruction.py  requirements.txt  setup.py
benchmarks/: benchmark_rust_vs_python.py
docs/: tutorial_gpu.md
foaml/: FIXES.md  OptiqAI.htm  conftest.py  pytest.ini  requirements.txt  test_pipeline.py
frontend/: main_window.py
include/: data_management.h  fdtd_simulation.h  meep_simulation.h  simulation_interface.h
main/: inference.py  main.py  simulate.py  train_ml.py
models/: architecture.py  cnn.py
preprocessing/: preprocessing.py
src/: data_management.cpp  fdtd_simulation.cpp  meep_simulation.cpp
tests/: test_physics.py  test_pipeline.py
training/: trainer.py
utils/: config.py  conversion.py  data_loader.py  fft_utils.py  geometry_utils.py  logger.py  metrics.py  trainer.py  visualization.py
(+55 files in other folders)
